<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/trips"
        android:checkableBehavior="single"
        android:orderInCategory="1" />

    <group
        android:id="@+id/other"
        android:orderInCategory="2">
        <item
            android:id="@+id/action_archive"
            android:enabled="false"
            android:icon="@drawable/ic_archive"
            android:title="@string/action_archive" />
        <item
            android:id="@+id/action_information"
            android:enabled="false"
            android:icon="@drawable/ic_information"
            android:title="@string/action_information" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>
</menu>
